2004-01-04  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-declaration.c: 
	(cr_declaration_unlin): fixed a bug spoted by
	Rob BUIS.

2003-12-27  Dodji Seketeli  <dodji@gnome.org>

	* csslint/csslint.c: did some fixes/cleanup here.
	Make sure csslint --help shows a proper help.
	* src/parser/cr-statement.c: 
	(cr_statement_dump): when a NULL statement is given, do
	not dump anything, instead considering this as an error.
	* src/parser/cr-stylesheet.c: 
	(cr_stylesheet_dump): give the possibility to dump
	empty sheets, instead of considering this case as
	an error case.
	
2003-12-24  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-additional-sel.h,src/parser/cr-pseudo.h,
	src/parser/cr-utils.h: some light cosmetic changes.
	* src/seleng/cr-sel-eng.c: several fixes. Managed to
	make the pluggable handler for pseudo class selectors
	evaluation work. Wrote a handler for the ":first-child"
	pseudo class selector. This class is now officially supported.

2003-12-24  Dodji Seketeli  <dodji@gnome.org>

	* src/parser/cr-additional-sel.h: small cosmetic changes.
	* src/seleng/cr-sel-eng.c: started to work on the
	support of a pluggable handler for pseudo class selectors
	evaluation. Wrote facilities to register/unregister/lookup
	the handler.
	* src/seleng/cr-sel-eng.c: 
	(pseudo_class_add_sel_matches_node)  pluggable pseudo class selection
	evaluation architecture is in place. I still have to
	writte a real "handle" to handle say ":first-child" pseudo
	class so that I can test/debug the whole code.

2003-12-21  Dodji Seketeli  <dodji@gnome.org>

	* docs/design/parser-architecture.txt: fixed some typos.

2003-12-14  Dodji Seketeli <dodji@gnome.org>

	* docs/examples/selection-example-1.c:
	* docs/examples/selection-example-1.xml:
	* docs/examples/selection-example-1.css: added a test case
	for the A + B type of selectors.
	 added
	* src/seleng/cr-sel-eng.c: 
	(get_next_element_node)
	(get_prev_element_node)